--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="output.css" rel="stylesheet">
+  <link href="src/output.css" rel="stylesheet">
 </head>
 <body>
   <!-- Header -->
@@ -67,7 +67,7 @@
         </div>
         <div class="w-full self-end px-7 lg:w-1/2">
           <div class="mt-10 bg-cyan-700 rounded-t-full max-w-2xs mx-auto">
-            <img src="./img/NafisRizqullah.png" alt="NafisRizqullah" class="max-w-full mx-auto h-80">
+            <img src="src/img/NafisRizqullah.png" alt="NafisRizqullah" class="max-w-full mx-auto h-80">
           </div>
         </div>
       </div>
@@ -106,6 +106,6 @@
   </section>
   <!-- End About Section -->
 
-   <script src="script.js"></script>
+   <script src="src/script.js"></script>
 </body>
 </html>
