--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container mx-auto lg:border lg:border-slate-300 lg:rounded-full">
       <div class="flex items-center justify-between relative lg:left-5">
         <div class="px-3 py-2 flex items-center">
-          <a href="home.html" class="text-2xl font-bold text-white block">
-            <img src="/src/img/Logo.png" alt="Logo" class="w-10 h-5">
+          <a href="index.html" class="text-2xl font-bold text-white block">
+            <img src="src/img/Logo.png" alt="Logo" class="w-10 h-5">
           </a>
           <a href="#">
             <strong class="text-black mx-3">Rizqullah</strong>
@@ -28,19 +28,19 @@
           <nav id="nav-menu" class="hidden absolute bg-white shadow-lg max-w-60 w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none">
             <ul class="block lg:flex">
               <li class="group">
-                <a href="#" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Beranda </a>
+                <a href="index.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Beranda </a>
               </li>
               <li class="group">
-                <a href="about.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> About </a>
+                <a href="src/about.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> About </a>
               </li>
               <li class="group">
-                <a href="project.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Project </a>
+                <a href="src/project.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Project </a>
               </li>
               <li class="group">
-                <a href="form.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Form </a>
+                <a href="src/form.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Form </a>
               </li>
               <li class="group">
-                <a href="contact.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Kontak </a>
+                <a href="src/contact.html" class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Kontak </a>
               </li>
             </ul>
           </nav>
