--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
         <div class="container mx-auto lg:border lg:border-slate-300 lg:rounded-full">
             <div class="flex items-center justify-between relative lg:left-5">
                 <div class="px-3 py-2 flex items-center">
-                    <a href="home.html" class="text-2xl font-bold text-primary block">
+                    <a href="" class="text-2xl font-bold text-primary block">
                         <img src="/src/img/Logo.png" alt="Logo" class="w-10 h-5">
                     </a>
                     <a href="#">
