--- a/src/form.html
+++ b/src/form.html
@@ -14,8 +14,8 @@
         <div class="container mx-auto lg:border lg:border-slate-300 lg:rounded-full">
             <div class="flex items-center justify-between relative lg:left-5">
                 <div class="px-3 py-2 flex items-center">
-                    <a href="home.html" class="text-2xl font-bold text-primary block">
-                        <img src="/src/img/Logo.png" alt="Logo" class="w-10 h-5">
+                    <a href="index.html" class="text-2xl font-bold text-primary block">
+                        <img src="img/Logo.png" alt="Logo" class="w-10 h-5">
                     </a>
                     <a href="#">
                         <strong class="text-black mx-3">Rizqullah</strong>
@@ -32,7 +32,7 @@
                         class="hidden absolute bg-white shadow-lg max-w-60 w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none">
                         <ul class="block lg:flex">
                             <li class="group">
-                                <a href="index.html"
+                                <a href="/index.html"
                                     class="text-base text-black py-2 mx-8 flex group-hover:text-primary"> Beranda </a>
                             </li>
                             <li class="group">
